Readme updated with run steps